Fix about box word wrapping

--- a/assets/less/mio/classes/profile/container.less
+++ b/assets/less/mio/classes/profile/container.less
@@ -3,6 +3,8 @@
 
     &__main {
         flex: 1 1 auto;
+        word-wrap: break-word;
+        overflow: hidden;
     }
 
     &__side {
